JSDOC updated for Board put
