# lib/router/router.js
@@ -157,7 +157,7 @@ router.post('/api/boards', addBoard)
  *              type: array
  *              items:
  *                type: string
- *                example: [ "John", "Elizabeth" ]
+ *              example: [ "John", "Elizabeth" ]
  *            done:
  *              type: boolean
  *              example: false
